--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@ h1{
       <div class="text">
       <h3>Hello 👋 , I am</h3>
       <h1>Vasanthi Reddy</h1>
-      <p>I'm a <span>Web Developer</span> finds passionate towards it.</p>
+      <p>I'm a <span>Web Developer</span> and <span>Java Developer</span>  finds passionate towards it.</p>
    
       <div class="social-media">
-      <a href="https://www.linkedin.com/in/mamidi-vasanthi-reddy-68204b22a/"><i class='bx bxl-linkedin-square'></i></a>
+      <a href="https://www.linkedin.com/in/vasanthimamidi/"><i class='bx bxl-linkedin-square'></i></a>
       <a href="https://github.com/Mamidivasanthi/Portfolio"><i class='bx bxl-github' ></i></a>
       <a href="https://mail.google.com/mail/u/0/#inbox"><i class='bx bxl-gmail' ></i></a>
       <!-- <img src="tsp2.png" alt="" style="height:80vh;">   -->
