--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@ h1{
    
       <div class="social-media">
       <a href="https://www.linkedin.com/in/vasanthimamidi/"><i class='bx bxl-linkedin-square'></i></a>
-      <a href="https://github.com/Mamidivasanthi/Portfolio"><i class='bx bxl-github' ></i></a>
+      <a href="https://github.com/Mamidivasanthi/"><i class='bx bxl-github' ></i></a>
       <a href="https://mail.google.com/mail/u/0/#inbox"><i class='bx bxl-gmail' ></i></a>
       <!-- <img src="tsp2.png" alt="" style="height:80vh;">   -->
       </div>
-      <a href="Resume.pdf" class="btn" style="background: var(--main-color);color:#fdfdfd;">Download CV</a><br>
+      <a href="Vasanthi's Resume (1)(1).pdf" class="btn" style="background: var(--main-color);color:#fdfdfd;">Download CV</a><br>
     </div> 
 <div class="profession-container" id="homepage" >
   <div class="profession-box">
