--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ h1{
       <a href="https://mail.google.com/mail/u/0/#inbox"><i class='bx bxl-gmail' ></i></a>
       <!-- <img src="tsp2.png" alt="" style="height:80vh;">   -->
       </div>
-      <a href="Vasanthi's Resume (1)(1).pdf" class="btn" style="background: var(--main-color);color:#fdfdfd;">Download CV</a><br>
+      <a href="Resume.pdf" class="btn" style="background: var(--main-color);color:#fdfdfd;">Download CV</a><br>
     </div> 
 <div class="profession-container" id="homepage" >
   <div class="profession-box">
